# Depth

./: .gitignore  CMakeLists.txt  build.sh  depth  depth.cap  make  makefile  out  todo.txt
engine/: CMakeLists.txt  camera.cpp  camera.hpp  common.cpp  common.hpp  events.hpp  image.cpp  image.hpp  input.cpp  listener.hpp  memory.hpp  memory.hpp~  ortho_camera.cpp  ortho_camera.hpp  render.cpp  render.hpp  shader.cpp  shader.hpp  stbi_image.cpp  texture.cpp  texture.hpp  window.cpp  window.hpp
engine/assets/: asset.cpp  asset.hpp  asset_manager.cpp  asset_manager.hpp
engine/entity/: component.cpp  component.hpp  entity.cpp  entity.hpp
engine/entity/components/: sprite.cpp  sprite.hpp
engine/events/: events.cpp  events.hpp  input.cpp  input.hpp
engine/gfx/: color.cpp  color.hpp  platform.cpp  platform.hpp  quad_render.cpp  quad_render.hpp  render.cpp  render.hpp  shader.cpp  shader.hpp  spritesheet.cpp  spritesheet.hpp  texture.cpp  texture.hpp  texture_atlas.cpp  texture_atlas.hpp
engine/listener/: camera_listener.hpp  listener.cpp  window_listener.hpp
engine/utils/: bitmap.cpp  bitmap.hpp  bitmap.hpp~  image.cpp  image.hpp  logging.hpp  memory.hpp  platform.cpp  platform.hpp  singleton.hpp
engine/view/: camera.cpp  camera.hpp
res/shaders/: quad_fs.glsl  quad_gs.glsl  quad_vs.glsl
src/: app.hpp  common.hpp  events.cpp  events.hpp  input.cpp  input.hpp  main.cpp  window.cpp  window.hpp  world.hpp
src/utils/: logging.cpp  noncopyable.hpp  singleton.hpp
tests/: CMakeLists.txt  tests.hpp
tests/unit/: bitmap.cpp  objectpool.cpp
